Separate check/radio icon from menu item icon

--- a/flatlaf-core/src/main/resources/com/formdev/flatlaf/FlatLaf.properties
+++ b/flatlaf-core/src/main/resources/com/formdev/flatlaf/FlatLaf.properties
@@ -457,6 +457,7 @@ MenuItem.acceleratorDelimiter = "+"
 [mac]MenuItem.acceleratorDelimiter = ""
 MenuItem.selectionInsets = 0,0,0,0
 MenuItem.selectionArc = 0
+MenuItem.separateIconFromCheck = false
 
 # for MenuItem.selectionType = underline
 MenuItem.underlineSelectionBackground = @menuHoverBackground
